--- a/frontend/src/pages/Login/login.css
+++ b/frontend/src/pages/Login/login.css
@@ -1,4 +1,40 @@
 #page-background {
-    background: url(../../assets/background.svg) no-repeat;
+  background: url(../../assets/background.svg) no-repeat;
 }
 
+div.background-form-login {
+  height: 40vh;
+  width: 25vw;
+  background-color: black;
+  padding: 3vh 2vh;
+}
+form {
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+h1 {
+  font-size: 4vh;
+  margin-left: 2vh;
+  align-self: flex-start;
+}
+
+ button {
+  border-radius: 4px;
+  width: 20vw;
+}
+
+.input-column {
+  background-color: red;
+  align-self: center;
+}
+
+img.login {
+  margin-bottom: 7vh;
+  width: 25vw;
+}
